inline edit row action menu, no longer being clipped

--- a/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
+++ b/ui/client-react/src/components/dataTable/qbGrid/qbGrid.scss
@@ -480,17 +480,17 @@ $edit-icon-font-size: 18px;
 .qbGrid > tbody > tr > td:first-of-type {
     height: 32px;
     background: $row-bg-color;
-    z-index: 1000;
+    //z-index: 1000;
     outline: $row-cell-border-color;
 }
 
-.qbHeaderCell.stickyCell {
+.stickyCell {
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 //Makes row edit action menu pop over the table instead of over stickyColumn
-.dropdown-menu {
-    top: 0;
-    left: 27px;
-}
+//.dropdown-menu {
+//    top: 0;
+//    left: 27px;
+//}
